--- a/templates/header_user.html
+++ b/templates/header_user.html
@@ -75,7 +75,7 @@
         <div class="nav-container d-flex align-items-center justify-content-between w-100">
             <span class="navbar-brand">
                 <!-- <img src="https://gestion.ntsgrow.com/assets/img/favicon/NTS_faviocon.png" alt=""> -->
-                <img src="https://gestion.ntsgrow.com/assets/img/favicon/NTS-G.R.O.W-Logo.png" style="max-width:80px">
+                <img src="{% static 'images/NTS Logo.webp' %}" style="max-width:80px">
             </span>
             
             
