--- a/templates/index.html
+++ b/templates/index.html
@@ -10,22 +10,22 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Apple Touch Icon (for iOS devices) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"  />
-    <link rel="apple-touch-icon" href="https://gestion.ntsgrow.com/assets/img/favicon/favicon1.png">
+    <link rel="apple-touch-icon" href="{% static 'images/NTS Logo.webp' %}">
     <!-- Apple Touch Icon for different sizes (optional for better resolution support) -->
-    <link rel="apple-touch-icon" sizes="180x180" href="https://gestion.ntsgrow.com/assets/img/favicon/favicon1.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="https://gestion.ntsgrow.com/assets/img/favicon/favicon1.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="https://gestion.ntsgrow.com/assets/img/favicon/favicon1.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="https://gestion.ntsgrow.com/assets/img/favicon/favicon1.png">
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/NTS Logo.webp' %}">
+    <link rel="apple-touch-icon" sizes="152x152" href="{% static 'images/NTS Logo.webp' %}">
+    <link rel="apple-touch-icon" sizes="144x144" href="{% static 'images/NTS Logo.webp' %}">
+    <link rel="apple-touch-icon" sizes="120x120" href="{% static 'images/NTS Logo.webp' %}">
+    <meta name="mobile-web-app-capable" content="yes">
     <!-- Status Bar Style (controls how the iOS status bar looks when the app is opened) -->
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <!-- Other options for status bar: "black" or "default" -->
     <!-- Set the name of the app as it will appear on the home screen -->
-    <meta name="apple-mobile-web-app-title" content="Triagro">
+    <meta name="apple-mobile-web-app-title" content="Leaf Analysis">
     <!-- Optional: Set the background color for the splash screen -->
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <!-- Web App Manifest (optional, for more customization) -->
-    <link rel="manifest" href="https://gestion.ntsgrow.com/assets/img/favicon/manifest.json"> 
+    <link rel="manifest" href="{% static 'manifest.json' %}"> 
     <!-- Optional: Set the theme color for browsers that support it (e.g., Chrome, Opera, Edge) -->
     <!-- For good practice: Set the viewport for responsive design -->
     <title>Crop Nutrition Dashboard</title>
@@ -94,7 +94,7 @@
                         <img src="{% static 'images/nts_logo.jpeg' %}" alt="" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Soil Therapy™</h5>
-                            <p class="card-text">Unlock your soil’s potential with tailored nutrient insights.</p>
+                            <p class="card-text">Unlock your soil's potential with tailored nutrient insights.</p>
                         </div>
                     </div>
                 </div>
@@ -150,7 +150,7 @@
 
                 <span class="dashboard-card dashboard-button" onclick="window.location.href='/soil-analysis/?role={{ role }}&token={{ token }}'">
                     <div class="text-center box-header">Soil Therapy™</div>
-                    <div class="text-justify">Unlock your soil’s potential with tailored nutrient insights.</div>
+                    <div class="text-justify">Unlock your soil's potential with tailored nutrient insights.</div>
                 </span>
                 <span class="dashboard-card dashboard-button" onclick="window.location.href='/plant-analysis/?role={{ role }}&token={{ token }}'">
                     <div class="text-center box-header">Plant Therapy™</div>
@@ -211,7 +211,7 @@
 
                 <span class="dashboard-card dashboard-button" onclick="window.location.href='/soil-analysis/?role={{ role }}&token={{ token }}'">
                     <div class="text-center box-header">Soil Therapy™</div>
-                    <div class="text-justify">Unlock your soil’s potential with tailored nutrient insights.</div>
+                    <div class="text-justify">Unlock your soil's potential with tailored nutrient insights.</div>
                 </span>
                 <span class="dashboard-card dashboard-button" onclick="window.location.href='/plant-analysis/?role={{ role }}&token={{ token }}'">
                     <div class="text-center box-header">Plant Therapy™</div>
