--- a/templates/reporting/base.html
+++ b/templates/reporting/base.html
@@ -9,22 +9,22 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" id="bootstrapCSS"/>
   <!-- Apple Touch Icon (for iOS devices) -->
-  <link rel="apple-touch-icon" href="https://gestion.ntsgrow.com/assets/img/favicon/favicon1.png">
+  <link rel="apple-touch-icon" href="{% static 'images/NTS Logo.webp' %}">
   <!-- Apple Touch Icon for different sizes (optional for better resolution support) -->
-  <link rel="apple-touch-icon" sizes="180x180" href="https://gestion.ntsgrow.com/assets/img/favicon/favicon1.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="https://gestion.ntsgrow.com/assets/img/favicon/favicon1.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="https://gestion.ntsgrow.com/assets/img/favicon/favicon1.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="https://gestion.ntsgrow.com/assets/img/favicon/favicon1.png">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/NTS Logo.webp' %}">
+  <link rel="apple-touch-icon" sizes="152x152" href="{% static 'images/NTS Logo.webp' %}">
+  <link rel="apple-touch-icon" sizes="144x144" href="{% static 'images/NTS Logo.webp' %}">
+  <link rel="apple-touch-icon" sizes="120x120" href="{% static 'images/NTS Logo.webp' %}">
+  <meta name="mobile-web-app-capable" content="yes">
   <!-- Status Bar Style (controls how the iOS status bar looks when the app is opened) -->
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <!-- Other options for status bar: "black" or "default" -->
   <!-- Set the name of the app as it will appear on the home screen -->
-  <meta name="apple-mobile-web-app-title" content="Triagro">
+  <meta name="apple-mobile-web-app-title" content="Leaf Analysis">
   <!-- Optional: Set the background color for the splash screen -->
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <!-- Web App Manifest (optional, for more customization) -->
-  <link rel="manifest" href="https://gestion.ntsgrow.com/assets/img/favicon/manifest.json"> 
+  <link rel="manifest" href="{% static 'manifest.json' %}"> 
   <!-- Optional: Set the theme color for browsers that support it (e.g., Chrome, Opera, Edge) -->
   <!-- For good practice: Set the viewport for responsive design -->
   {% block style%} {% endblock %}
